--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,17 @@ package_dir =
     =src
 packages = find:
 include_package_data = True
+install_requires = 
+    pandas>=1.4.2,<2
+    yfinance>=0.1.70,<1
+    plotly>=5.8.2,<6
+    investpy>=0.0.4,<1
+    numpy>=1.22.4,<2
+    requests>=2.28.0,<3
+    pyjstat>=2.2.1,<3
+    seaborn>=0.11.2,<1
+    matplotlib>=3.5.2,<4
+    IPython>=8.4.0,<9
 
 [options.packages.find]
 where = src
